Primer commit desde la nueva PC, se agrego icono para la pagina 404 que falta modificar, se eliminaron imagenes innecesarias, y se modificaron algunas cuestiones de estilo que quiero chequear si estan siendo compiladas

--- a/trajes.html
+++ b/trajes.html
@@ -44,13 +44,14 @@
   <video src="./video/suitUp.mp4" autoplay loop muted></video>
 </main>
 <footer>
-    <div class="redes">
-        <ul>
-          <li><a class="redes-link" href="https://www.instagram.com/robertdowneyjr/?hl=es-la" target="blank"><span class="iconify" data-icon="akar-icons:instagram-fill" data-inline="false"></span></a></li>
-          <li><a class="redes-link" href="https://twitter.com/iron_man?lang=es" target="blank"><span class="iconify" data-icon="akar-icons:twitter-fill" data-inline="false"></span></a></li>
-          <li><a class="redes-link" href="https://www.marvel.com/characters/iron-man-tony-stark" target="blank"><span class="iconify" data-icon="whh:ironman" data-inline="false"></span></a></li>
-        </ul>
-    </div>
+  <div class="redes">
+    <ul>
+      <li><a class="redes-link" href="https://www.instagram.com/robertdowneyjr/?hl=es-la" target="blank"><span class="iconify" data-icon="akar-icons:instagram-fill" data-inline="false"></span></a></li>
+      <li><a class="redes-link" href="https://twitter.com/iron_man?lang=es" target="blank"><span class="iconify" data-icon="akar-icons:twitter-fill" data-inline="false"></span></a></li>
+      <li><a class="redes-link" href="https://www.marvel.com/characters/iron-man-tony-stark" target="blank"><span class="iconify" data-icon="whh:ironman" data-inline="false"></span></a></li>
+      <li><a class="redes-link" href="404.html"> <span class="iconify" data-icon="bx:bx-error-alt"></span></a></li>
+    </ul>
+  </div>
 </footer>
           <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
           <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
