--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
                   <a class="nav-link active" href="./legado.html">Legado</a>
                 </div>
               </div>
-            </div>
+            </div>we
+            
         </nav>
         </div>
     </header>
@@ -46,17 +47,20 @@
         <h1 class="animate_animated animate__fadeIn">Iron Man</h1>
       </div>
     </main>
-        <footer>
-          <div class="redes">
-            <ul>
-                <li><a class="redes-link" href="https://www.instagram.com/robertdowneyjr/?hl=es-la" target="blank"><span class="iconify" data-icon="akar-icons:instagram-fill" data-inline="false"></span></a></li>
-                <li><a class="redes-link" href="https://twitter.com/iron_man?lang=es" target="blank"><span class="iconify" data-icon="akar-icons:twitter-fill" data-inline="false"></span></a></li>
-                <li><a class="redes-link" href="https://www.marvel.com/characters/iron-man-tony-stark" target="blank"><span class="iconify" data-icon="whh:ironman" data-inline="false"></span></a></li>
-            </ul>
-        </footer>
+    <footer>
+      <div class="redes">
+        <ul>
+          <li><a class="redes-link" href="https://www.instagram.com/robertdowneyjr/?hl=es-la" target="blank"><span class="iconify" data-icon="akar-icons:instagram-fill" data-inline="false"></span></a></li>
+          <li><a class="redes-link" href="https://twitter.com/iron_man?lang=es" target="blank"><span class="iconify" data-icon="akar-icons:twitter-fill" data-inline="false"></span></a></li>
+          <li><a class="redes-link" href="https://www.marvel.com/characters/iron-man-tony-stark" target="blank"><span class="iconify" data-icon="whh:ironman" data-inline="false"></span></a></li>
+          <li><a class="redes-link" href="404.html"> <span class="iconify" data-icon="bx:bx-error-alt"></span></a></li>
+        </ul>
+    </div>
+    </footer>
         <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
         <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
         <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+        <script src="https://code.iconify.design/2/2.0.3/iconify.min.js"></script>
 </body>
 </html>
