--- a/404.html
+++ b/404.html
@@ -7,12 +7,9 @@
     <link rel="stylesheet" href="styles/main.css">
     <title>Error 404 - Page not found</title>
 </head>
-<body id="body404">
-
-        <h1>Error 404</h1>
-        <h3 id="imgh3">Page not found</h2>
-        <p>El sitio se encuentra en construcción. 
-        Puedes regresar al <a href="index.html">Home</a>.</p>
-
+<body class="img404">
+        <h1>Error 404!</h1>
+        <h3>La página que solicitaste se encuentra en construcción. 
+            Puedes regresar al <a href="index.html">Home.</a>.</h3>
 </body>
 </html>
